SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Assign_to_Existing_Project_on_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Existing_Project_on_Closed_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Existing Project on Closed Won</label>
    <type>Checkbox</type>
</CustomField>