SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Automatically_add_Time_Card_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Automatically_add_Time_Card_to_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically add Time Card to Budget</label>
    <type>Checkbox</type>
</CustomField>