SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Automatically_Create_Inv_from_ConSigning__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Create_Inv_from_ConSigning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Create Inv from ConSigning</label>
    <type>Checkbox</type>
</CustomField>