SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Change_Order_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order Configuration</label>
    <type>Checkbox</type>
</CustomField>