SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Create_Budget_on_Quote_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Create_Budget_on_Quote_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Budget on Quote Acceptance</label>
    <type>Checkbox</type>
</CustomField>