SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Create_Invoice_on_Approval__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice_on_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Invoice on Approval</label>
    <type>Checkbox</type>
</CustomField>