SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Create_PO_On_Vendor_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Create_PO_On_Vendor_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create PO On Vendor Acceptance</label>
    <type>Checkbox</type>
</CustomField>