SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Create_Project_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Project_from_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Project on Opportunity Closed Won</label>
    <type>Checkbox</type>
</CustomField>