SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Default_Account_for_PA__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_for_PA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Account for PA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Admin Interface Node Configurations (Default Account for PA)</relationshipLabel>
    <relationshipName>Admin_Interface_Node_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>