SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Default_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It was used as default project owner when the original project owner was Inactive</description>
    <inlineHelpText>It was used as default project owner when the original project owner was Inactive</inlineHelpText>
    <label>Default Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Admin_Interface_Node_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>