SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Disable__c.field-meta.xml
<CustomField>
    <fullName>Disable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable</label>
    <type>Checkbox</type>
</CustomField>