SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Enable_Schedule_Items_Import__c.field-meta.xml
<CustomField>
    <fullName>Enable_Schedule_Items_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Schedule Items Import</label>
    <type>Checkbox</type>
</CustomField>