SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Get_Lines_From_CO__c.field-meta.xml
<CustomField>
    <fullName>Get_Lines_From_CO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Lines From CO</label>
    <type>Checkbox</type>
</CustomField>