SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Google_Map_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_API_Key__c</fullName>
    <label>Google Map API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>