SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Group_by_Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_by_Cost_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group by Cost Code</label>
    <type>Checkbox</type>
</CustomField>