SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <label>Icon URL</label>
    <type>Url</type>
</CustomField>