SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Is_Pre_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pre Qualified</label>
    <type>Checkbox</type>
</CustomField>