SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Only_RFQ_Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Only_RFQ_Portal_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only RFQ Portal Users</label>
    <type>Checkbox</type>
</CustomField>