SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Open_New_Tab__c.field-meta.xml
<CustomField>
    <fullName>Open_New_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open New Tab</label>
    <type>Checkbox</type>
</CustomField>