SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Org_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_Base_URL__c</fullName>
    <label>Org Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>