SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>