SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Parent_Node__c.field-meta.xml
<CustomField>
    <fullName>Parent_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Node</label>
    <referenceTo>Admin_Interface_Node_Configuration__c</referenceTo>
    <relationshipName>Admin_Interface_Node_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>