SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Quote_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Configuration</label>
    <type>Checkbox</type>
</CustomField>