SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Require_Vendor_to_Sign_Lien_Release__c.field-meta.xml
<CustomField>
    <fullName>Require_Vendor_to_Sign_Lien_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Vendor to Sign Lien Release?</label>
    <type>Checkbox</type>
</CustomField>