SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Retreive_Aerial_Photo_of_project__c.field-meta.xml
<CustomField>
    <fullName>Retreive_Aerial_Photo_of_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retreive Aerial Photo of project</label>
    <type>Checkbox</type>
</CustomField>