SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Selected_Templates__c.field-meta.xml
<CustomField>
    <fullName>Selected_Templates__c</fullName>
    <label>Selected Templates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>