SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Send_customer_Quote_after_signature__c.field-meta.xml
<CustomField>
    <fullName>Send_customer_Quote_after_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send customer Quote after signature</label>
    <type>Checkbox</type>
</CustomField>