SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Send_Vendor_Lien_Release_On_Approval__c.field-meta.xml
<CustomField>
    <fullName>Send_Vendor_Lien_Release_On_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Vendor Lien Release On Approval</label>
    <type>Checkbox</type>
</CustomField>