SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Show_Fabrication_taxes__c.field-meta.xml
<CustomField>
    <fullName>Show_Fabrication_taxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Fabrication taxes</label>
    <type>Checkbox</type>
</CustomField>