SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <label>Tab Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>