SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Update_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Update_Price_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Price Book</label>
    <type>Checkbox</type>
</CustomField>