SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Update_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Update_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Quantity</label>
    <type>Checkbox</type>
</CustomField>