SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Update_the_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Update_the_Opp_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update the Opp Amount</label>
    <type>Checkbox</type>
</CustomField>