SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/User_SOV_Sharing__c.field-meta.xml
<CustomField>
    <fullName>User_SOV_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User SOV Sharing</label>
    <type>Checkbox</type>
</CustomField>