SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Using_Communities_for_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Using_Communities_for_RFQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using Communities	for RFQ</label>
    <type>Checkbox</type>
</CustomField>