SubBt/force-app/main/default/objects/Admin_Interface_Node_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Index__c</columns>
    <columns>Description__c</columns>
    <columns>Tab_Name__c</columns>
    <columns>Disable__c</columns>
    <columns>Open_New_Tab__c</columns>
    <columns>Icon_URL__c</columns>
    <columns>Page_URL__c</columns>
    <columns>Parent_Node__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>